# CS236_Lexical-Analyzer

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  ColonDashAutomaton.h  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  IDAutomation.cpp  IDAutomation.h  LeftPAutomaton.cpp  LeftPAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  PeriodAutomaton.cpp  PeriodAutomaton.h  QueriesAutomation.cpp  QueriesAutomation.h  RightPAutomaton.cpp  RightPAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  main.cpp  qAutomaton.cpp  qAutomaton.h
